clusterplex/clusterplex-expose.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-lb
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: pms # label of the pod
  ports:
    - name: plex
      protocol: TCP
      port: 32400
      targetPort: 32400
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 32400
