clusterplex/clusterplex-ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
  labels:
    app: plex
spec:
  rules:
    - host: plex.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clusterplex-pms
                port:
                  number: 32400
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-https
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: ca-issuer
  labels:
    app: plex
spec:
  rules:
    - host: plex.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clusterplex-pms
                port:
                  number: 32400
  tls:
    - hosts:
        - plex.celestium.life
      secretName: plex-cert
